# movie-trend-analysis

./: movie_api.py  pyproject.toml  review_scraper.py
