[tool.poetry]
name = "movie-trend-analysis"
version = "0.1.0"
description = ""
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
numpy = "^2.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
